--- a/css/12bool.css
+++ b/css/12bool.css
@@ -5,8 +5,124 @@
 }
 
 .clearfix::after,
-.container::after {
+.row::after {
     content: '';
     display: table;
     clear: both;
+}
+
+.row {
+    max-width: 1200px;
+    margin: 0 auto;
+    /* DA CANCELLARE */
+    height: 100px;
+}
+
+.row .row {
+    padding: 5px;
+}
+
+.row .row [class^="col-"] {
+    background-color: yellow;
+}
+
+[class^="col-"] {
+    height: 50px;
+    background-color: aqua;
+    border: 1px solid black;
+    float: left;
+    text-align: center;
+    line-height: 100px;
+}
+
+/* extra small device */
+.col-xs-1  {width: calc((100% / 12) * 1 );}
+.col-xs-2  {width: calc((100% / 12) * 2 );}
+.col-xs-3  {width: calc((100% / 12) * 3 );}
+.col-xs-4  {width: calc((100% / 12) * 4 );}
+.col-xs-5  {width: calc((100% / 12) * 5 );}
+.col-xs-6  {width: calc((100% / 12) * 6 );}
+.col-xs-7  {width: calc((100% / 12) * 7 );}
+.col-xs-8  {width: calc((100% / 12) * 8 );}
+.col-xs-9  {width: calc((100% / 12) * 9 );}
+.col-xs-10 {width: calc((100% / 12) * 10);}
+.col-xs-11 {width: calc((100% / 12) * 11);}
+.col-xs-12 {width: calc((100% / 12) * 12);}
+
+/* OFFSET */
+.col-xs-offset-0  {margin-left: 0;}
+.col-xs-offset-1  {width: calc((100% / 12) * 1 );}
+.col-xs-offset-2  {width: calc((100% / 12) * 2 );}
+.col-xs-offset-3  {width: calc((100% / 12) * 3 );}
+.col-xs-offset-4  {width: calc((100% / 12) * 4 );}
+.col-xs-offset-5  {width: calc((100% / 12) * 5 );}
+.col-xs-offset-6  {width: calc((100% / 12) * 6 );}
+.col-xs-offset-7  {width: calc((100% / 12) * 7 );}
+.col-xs-offset-8  {width: calc((100% / 12) * 8 );}
+.col-xs-offset-9  {width: calc((100% / 12) * 9 );}
+.col-xs-offset-10 {width: calc((100% / 12) * 10);}
+.col-xs-offset-11 {width: calc((100% / 12) * 11);}
+.col-xs-offset-12 {width: calc((100% / 12) * 12);}
+
+/* large devices */
+@media screen and (min-width: 992px) {
+    .col-lg-1  {width: calc((100% / 12) * 1 );}
+    .col-lg-2  {width: calc((100% / 12) * 2 );}
+    .col-lg-3  {width: calc((100% / 12) * 3 );}
+    .col-lg-4  {width: calc((100% / 12) * 4 );}
+    .col-lg-5  {width: calc((100% / 12) * 5 );}
+    .col-lg-6  {width: calc((100% / 12) * 6 );}
+    .col-lg-7  {width: calc((100% / 12) * 7 );}
+    .col-lg-8  {width: calc((100% / 12) * 8 );}
+    .col-lg-9  {width: calc((100% / 12) * 9 );}
+    .col-lg-10 {width: calc((100% / 12) * 10);}
+    .col-lg-11 {width: calc((100% / 12) * 11);}
+    .col-lg-12 {width: calc((100% / 12) * 12);}
+
+    /* OFFSET */
+    .col-lg-offset-0  {margin-left: 0;}
+    .col-lg-offset-1  {width: calc((100% / 12) * 1 );}
+    .col-lg-offset-2  {width: calc((100% / 12) * 2 );}
+    .col-lg-offset-3  {width: calc((100% / 12) * 3 );}
+    .col-lg-offset-4  {width: calc((100% / 12) * 4 );}
+    .col-lg-offset-5  {width: calc((100% / 12) * 5 );}
+    .col-lg-offset-6  {width: calc((100% / 12) * 6 );}
+    .col-lg-offset-7  {width: calc((100% / 12) * 7 );}
+    .col-lg-offset-8  {width: calc((100% / 12) * 8 );}
+    .col-lg-offset-9  {width: calc((100% / 12) * 9 );}
+    .col-lg-offset-10 {width: calc((100% / 12) * 10);}
+    .col-lg-offset-11 {width: calc((100% / 12) * 11);}
+    .col-lg-offset-12 {width: calc((100% / 12) * 12);}
+}
+
+
+/* medium devices */
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    .col-md-1  {width: calc((100% / 12) * 1 );}
+    .col-md-2  {width: calc((100% / 12) * 2 );}
+    .col-md-3  {width: calc((100% / 12) * 3 );}
+    .col-md-4  {width: calc((100% / 12) * 4 );}
+    .col-md-5  {width: calc((100% / 12) * 5 );}
+    .col-md-6  {width: calc((100% / 12) * 6 );}
+    .col-md-7  {width: calc((100% / 12) * 7 );}
+    .col-md-8  {width: calc((100% / 12) * 8 );}
+    .col-md-9  {width: calc((100% / 12) * 9 );}
+    .col-md-10 {width: calc((100% / 12) * 10);}
+    .col-md-11 {width: calc((100% / 12) * 11);}
+    .col-md-12 {width: calc((100% / 12) * 12);}
+
+    /* OFFSET */
+    .col-md-offset-0  {margin-left: 0;}
+    .col-md-offset-1  {width: calc((100% / 12) * 1 );}
+    .col-md-offset-2  {width: calc((100% / 12) * 2 );}
+    .col-md-offset-3  {width: calc((100% / 12) * 3 );}
+    .col-md-offset-4  {width: calc((100% / 12) * 4 );}
+    .col-md-offset-5  {width: calc((100% / 12) * 5 );}
+    .col-md-offset-6  {width: calc((100% / 12) * 6 );}
+    .col-md-offset-7  {width: calc((100% / 12) * 7 );}
+    .col-md-offset-8  {width: calc((100% / 12) * 8 );}
+    .col-md-offset-9  {width: calc((100% / 12) * 9 );}
+    .col-md-offset-10 {width: calc((100% / 12) * 10);}
+    .col-md-offset-11 {width: calc((100% / 12) * 11);}
+    .col-md-offset-12 {width: calc((100% / 12) * 12);}
 }
