--- a/css/12bool.css
+++ b/css/12bool.css
@@ -81,18 +81,18 @@
 
     /* OFFSET */
     .col-lg-offset-0  {margin-left: 0;}
-    .col-lg-offset-1  {width: calc((100% / 12) * 1 );}
-    .col-lg-offset-2  {width: calc((100% / 12) * 2 );}
-    .col-lg-offset-3  {width: calc((100% / 12) * 3 );}
-    .col-lg-offset-4  {width: calc((100% / 12) * 4 );}
-    .col-lg-offset-5  {width: calc((100% / 12) * 5 );}
-    .col-lg-offset-6  {width: calc((100% / 12) * 6 );}
-    .col-lg-offset-7  {width: calc((100% / 12) * 7 );}
-    .col-lg-offset-8  {width: calc((100% / 12) * 8 );}
-    .col-lg-offset-9  {width: calc((100% / 12) * 9 );}
-    .col-lg-offset-10 {width: calc((100% / 12) * 10);}
-    .col-lg-offset-11 {width: calc((100% / 12) * 11);}
-    .col-lg-offset-12 {width: calc((100% / 12) * 12);}
+    .col-lg-offset-1  {margin-left: calc((100% / 12) * 1 );}
+    .col-lg-offset-2  {margin-left: calc((100% / 12) * 2 );}
+    .col-lg-offset-3  {margin-left: calc((100% / 12) * 3 );}
+    .col-lg-offset-4  {margin-left: calc((100% / 12) * 4 );}
+    .col-lg-offset-5  {margin-left: calc((100% / 12) * 5 );}
+    .col-lg-offset-6  {margin-left: calc((100% / 12) * 6 );}
+    .col-lg-offset-7  {margin-left: calc((100% / 12) * 7 );}
+    .col-lg-offset-8  {margin-left: calc((100% / 12) * 8 );}
+    .col-lg-offset-9  {margin-left: calc((100% / 12) * 9 );}
+    .col-lg-offset-10 {margin-left: calc((100% / 12) * 10);}
+    .col-lg-offset-11 {margin-left: calc((100% / 12) * 11);}
+    .col-lg-offset-12 {margin-left: calc((100% / 12) * 12);}
 }
 
 
@@ -113,16 +113,16 @@
 
     /* OFFSET */
     .col-md-offset-0  {margin-left: 0;}
-    .col-md-offset-1  {width: calc((100% / 12) * 1 );}
-    .col-md-offset-2  {width: calc((100% / 12) * 2 );}
-    .col-md-offset-3  {width: calc((100% / 12) * 3 );}
-    .col-md-offset-4  {width: calc((100% / 12) * 4 );}
-    .col-md-offset-5  {width: calc((100% / 12) * 5 );}
-    .col-md-offset-6  {width: calc((100% / 12) * 6 );}
-    .col-md-offset-7  {width: calc((100% / 12) * 7 );}
-    .col-md-offset-8  {width: calc((100% / 12) * 8 );}
-    .col-md-offset-9  {width: calc((100% / 12) * 9 );}
-    .col-md-offset-10 {width: calc((100% / 12) * 10);}
-    .col-md-offset-11 {width: calc((100% / 12) * 11);}
-    .col-md-offset-12 {width: calc((100% / 12) * 12);}
+    .col-md-offset-1  {margin-left: calc((100% / 12) * 1 );}
+    .col-md-offset-2  {margin-left: calc((100% / 12) * 2 );}
+    .col-md-offset-3  {margin-left: calc((100% / 12) * 3 );}
+    .col-md-offset-4  {margin-left: calc((100% / 12) * 4 );}
+    .col-md-offset-5  {margin-left: calc((100% / 12) * 5 );}
+    .col-md-offset-6  {margin-left: calc((100% / 12) * 6 );}
+    .col-md-offset-7  {margin-left: calc((100% / 12) * 7 );}
+    .col-md-offset-8  {margin-left: calc((100% / 12) * 8 );}
+    .col-md-offset-9  {margin-left: calc((100% / 12) * 9 );}
+    .col-md-offset-10 {margin-left: calc((100% / 12) * 10);}
+    .col-md-offset-11 {margin-left: calc((100% / 12) * 11);}
+    .col-md-offset-12 {margin-left: calc((100% / 12) * 12);}
 }
