--- a/css/12bool.css
+++ b/css/12bool.css
@@ -18,10 +18,6 @@
     height: 100px;
 }
 
-.row .row {
-    padding: 5px;
-}
-
 .row .row [class^="col-"] {
     background-color: yellow;
 }
@@ -51,18 +47,18 @@
 
 /* OFFSET */
 .col-xs-offset-0  {margin-left: 0;}
-.col-xs-offset-1  {width: calc((100% / 12) * 1 );}
-.col-xs-offset-2  {width: calc((100% / 12) * 2 );}
-.col-xs-offset-3  {width: calc((100% / 12) * 3 );}
-.col-xs-offset-4  {width: calc((100% / 12) * 4 );}
-.col-xs-offset-5  {width: calc((100% / 12) * 5 );}
-.col-xs-offset-6  {width: calc((100% / 12) * 6 );}
-.col-xs-offset-7  {width: calc((100% / 12) * 7 );}
-.col-xs-offset-8  {width: calc((100% / 12) * 8 );}
-.col-xs-offset-9  {width: calc((100% / 12) * 9 );}
-.col-xs-offset-10 {width: calc((100% / 12) * 10);}
-.col-xs-offset-11 {width: calc((100% / 12) * 11);}
-.col-xs-offset-12 {width: calc((100% / 12) * 12);}
+.col-xs-offset-1  {margin-left: calc((100% / 12) * 1 );}
+.col-xs-offset-2  {margin-left: calc((100% / 12) * 2 );}
+.col-xs-offset-3  {margin-left: calc((100% / 12) * 3 );}
+.col-xs-offset-4  {margin-left: calc((100% / 12) * 4 );}
+.col-xs-offset-5  {margin-left: calc((100% / 12) * 5 );}
+.col-xs-offset-6  {margin-left: calc((100% / 12) * 6 );}
+.col-xs-offset-7  {margin-left: calc((100% / 12) * 7 );}
+.col-xs-offset-8  {margin-left: calc((100% / 12) * 8 );}
+.col-xs-offset-9  {margin-left: calc((100% / 12) * 9 );}
+.col-xs-offset-10 {margin-left: calc((100% / 12) * 10);}
+.col-xs-offset-11 {margin-left: calc((100% / 12) * 11);}
+.col-xs-offset-12 {margin-left: calc((100% / 12) * 12);}
 
 /* large devices */
 @media screen and (min-width: 992px) {
